k8s-dev/course.yml
apiVersion: v1
kind: Service
metadata:
  name: course-service
spec:
  selector:
    app: course
  ports:
    - name: http
      protocol: 'TCP'
      port: 4002
      targetPort: 4002
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course
  template:
    metadata:
      labels:
        app: course
    spec:
      containers:
        - name: course
          image: djeukeu/online-learning-course:1
          ports:
            - containerPort: 4002
