k8s-dev/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port: 
                  number: 4001
          - path: /api/user/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port: 
                  number: 4001
          - path: /api/course/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: course-service
                port: 
                  number: 4002
          - path: /api/payment/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-service
                port: 
                  number: 4003
